# personal-academy

./: .gitignore  README.md  app.py  requirements.txt
images/: agent_workflow.excalidraw
personal_academy/: .gitignore  README.md  course_content.md  course_transcript.md  feedback.md  homework.md  outline.md  pyproject.toml  quiz.md  report.md  research.md  review.md
personal_academy/demo_outputs/: course_content.md  homework.md  quiz.md
personal_academy/demo_outputs/ds_ltl_logistics/: course_content.md  homework.md  outline.md  quiz.md
personal_academy/demo_outputs/genetics_in_llms/: course_content.md  homework.md  outline.md  quiz.md
personal_academy/demo_outputs/llms/: course_transcript.md  outline.md
personal_academy/demo_outputs/us_history/: course_content.md  course_transcript.md  homework.md  outline.md  quiz.md
personal_academy/demo_outputs/world_history/: course_content.md  homework.md  outline.md  quiz.md
personal_academy/src/personal_academy/: crew.py  main.py
personal_academy/src/personal_academy/config/: agents.yaml  tasks.yaml
